flip.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flip-deployment
  namespace: aravind-ns
spec:
  replicas: 2

  selector:
    matchLabels:
      app: flip-app

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  
  template:
    metadata:
      labels:
        app: flip-app
    spec:
      containers:
        - name: flip-container
          image: muralisocial123/flipkart-clone-kuberox:v1.1.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "100m"


---

apiVersion: v1
kind: Service
metadata:
  name: flip-service
  namespace: aravind-ns
spec:
  selector:
    app: flip-app

  ports: 
      - protocol: TCP
        port: 80
        targetPort: 80
  type: ClusterIP
