kybdrl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyndrl-deployment
  namespace: aravind-ns
spec:
  replicas: 3

  selector:
    matchLabels:
      app: kyndrl-app

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  
  template:
    metadata:
      labels:
        app: kyndrl-app
    spec:
      containers:
        - name: kyndrl-container
          image: muralisocial123/kyndrl-flower-app:v1.1.0
          ports:
            - containerPort: 3015
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"


---

apiVersion: v1
kind: Service
metadata:
  name: kyndrl-service
  namespace: aravind-ns
spec:
  selector:
    app: kyndrl-app

  ports: 
      - protocol: TCP
        port: 80
        targetPort: 3015
  type: ClusterIP
