http-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: aravind-route
  namespace: aravind-ns
spec:
  parentRefs:
  - name: aravind-gateway

  rules:

  - matches:
    - path:
        type: PathPrefix
        value: /cart
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: ey-cart-service
      port: 80

  - matches:
    - path:
        type: PathPrefix
        value: /fitness
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: fitness-service
      port: 80

  - matches:
    - path:
        type: PathPrefix
        value: /flip
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: flip-service
      port: 80

  - matches:
    - path:
        type: PathPrefix
        value: /kyndrl
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: kyndrl-service
      port: 80

  - matches:
    - path:
        type: PathPrefix
        value: /transaction
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: transaction-service
      port: 80
